--- a/Public/cadastro.html
+++ b/Public/cadastro.html
@@ -18,38 +18,39 @@
 <body>
 
   <div class="login">
-    <!-- <div class="alerta_erro">
-      <div class="card_erro" id="cardErro">
-        <span id="mensagem_erro"></span>
-      </div>
-    </div> -->
     <div class="container">
       <div class="card card-cadastro">
         <h2>Bem-vindo!</h2>
         <div class="formulario">
-          
-          
+
+
           <div class="campo">
             <span>Nome:</span>
-            <input id="nome_input" type="text" placeholder="Seu nome"  required/>
+            <input id="nome_input" type="text" placeholder="Seu nome" required />
           </div>
           <div class="campo">
             <span>E-mail:</span>
             <input id="email_input" type="text" placeholder="meuemail@provedor.com" required />
           </div>
-          <div class="campo">
-            <span>Senha:</span>
-            <input id="senha_input" type="password" placeholder="*****************" required />
-          </div>
-          <div class="campo">
-            <span>Confirmação da Senha:</span>
-            <input id="confirmacao_senha_input" type="password" placeholder="*****************"  required/>
+          <div class="senhas">
+            <div class="campoSenha">
+              <span>Senha:</span>
+              <input id="senha_input" type="password" placeholder="*****************" required />
+            </div>
+            <div class="campoSenha2">
+              <span>Confirmação da Senha:</span>
+              <input id="confirmacao_senha_input" type="password" placeholder="*****************" required />
+            </div>
           </div>
           <button class="botao" onclick="cadastrar()">Cadastrar</button>
         </div>
-        <!-- <div id="div_aguardar" class="loading-div">
-          <img src="./assets/circle-loading.gif" id="loading-gif" />
-        </div> -->
+        <div id="loaderCad" class="loaderCad">
+          <div class="dot1"></div>
+          <div class="dot1"></div>
+          <div class="dot1"></div>
+          <div class="dot1"></div>
+          <div class="dot1"></div>
+        </div>
       </div>
     </div>
   </div>
@@ -59,41 +60,29 @@
 
 <script>
   function cadastrar() {
-    aguardar();
+    aguardarCadastro();
 
     //Recupere o valor da nova input pelo nome do id
     // Agora vá para o método fetch logo abaixo
-    var nomeVar = nome_input.value;
-    var emailVar = email_input.value;
-    var senhaVar = senha_input.value;
-    var confirmacaoSenhaVar = confirmacao_senha_input.value;
-    var empresaVar = listaEmpresas.value
+    var nomeCad = nome_input.value;
+    var emailCad = email_input.value;
+    var senhaCad = senha_input.value;
+    var confirmacaosenhaCad = confirmacao_senha_input.value;
+  
     if (
-      nomeVar == "" ||
-      emailVar == "" ||
-      senhaVar == "" ||
-      confirmacaoSenhaVar == ""
-      // empresaVar == ""
+      nomeCad == "" ||
+      emailCad == "" ||
+      senhaCad == "" ||
+      confirmacaosenhaCad == ""
     ) {
-      cardErro.style.display = "block";
-      mensagem_erro.innerHTML =
-        "(Mensagem de erro para todos os campos em branco)";
-
+      finalizarAguardar()
+      alert("preencha os campos corretamente")
+    }
+    if (senhaCad != confirmacaosenhaCad) {
+      alert("Senhas diferentes!")
       finalizarAguardar();
       return false;
-    } else {
-      setInterval(sumirMensagem, 5000);
-    }
-    if (senhaVar != confirmacaoSenhaVar){
-      cardErro.style.display = "block";
-      mensagem_erro.innerHTML =
-        "(Senhas diferentes)";
-
-      finalizarAguardar();
-      return false;
-    } else {
-      setInterval(sumirMensagem, 5000);
-    }
+    } 
 
     // Enviando o valor da nova input
     fetch("/usuarios/cadastrar", {
@@ -104,20 +93,16 @@
       body: JSON.stringify({
         // crie um atributo que recebe o valor recuperado aqui
         // Agora vá para o arquivo routes/usuario.js
-        nomeServer: nomeVar,
-        emailServer: emailVar,
-        senhaServer: senhaVar,
-        empresaServer: empresaVar
+        nomeServer: nomeCad,
+        emailServer: emailCad,
+        senhaServer: senhaCad,
       }),
     })
       .then(function (resposta) {
         console.log("resposta: ", resposta);
 
         if (resposta.ok) {
-          cardErro.style.display = "block";
-
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
+            alert("Cadastro realizado com sucesso! Redirecionando para tela de Login...");
 
           setTimeout(() => {
             window.location = "login.html";
@@ -135,25 +120,5 @@
       });
 
     return false;
-  }
-
-  function listar() {
-    fetch("/empresas/listar", {
-      method: "GET",
-    })
-      .then(function (resposta) {
-        resposta.json().then((empresas) => {
-          empresas.forEach((empresa) => {
-            listaEmpresas.innerHTML += `<option value='${empresa.id}'>${empresa.cnpj}</option>`;
-          });
-        });
-      })
-      .catch(function (resposta) {
-        console.log(`#ERRO: ${resposta}`);
-      });
-  }
-
-  function sumirMensagem() {
-    cardErro.style.display = "none";
   }
 </script>
