paginas do site principal

--- a/Public/index.html
+++ b/Public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ptbr">
 
 <head>
   <meta charset="UTF-8">
@@ -10,18 +10,53 @@
 
   <script src="./js/sessao.js"></script>
   <link rel="stylesheet" href="./css/index.css">
-  
+
 </head>
+
 <body>
-<div class="fundoImg">
-  <div class="box">
-  
+  <div class="fundoImg">
+    <div class="box">
+      <img src="../Public/assets/index/LogoEntrada.png" alt="">
+    </div>
   </div>
-</div>
+  <nav id="navbar">
+    <ul>
+      <li>Home</li>
+      <li>Depoimentos</li>
+      <li>Fotografia</li>
+      <li>Sobre</li>
+      <li>Contato</li>
+      <li>Cadastro</li>
+      <li>Login</li>
+    </ul>
+  </nav>
+  <div class="ContainerGrande">
+    <div class="PrimeiraPagina">
+      <div class="textoPagina">
+        <p>A fotografia é a arte de congelar o tempo e transformar o comum em extraordinário.</p>
+        <p id="citacao">Remy Donnadieu.</p>
+      </div>
+    </div>
+  </div>
+  <div class="ContainerGrande">
+    <div class="SegundaPagina">
+      <div class="textoPaginaP3">
+        <p>A fotografia transforma</p>
+        <p>O ato de fotografar vai muito alem de só clicar, em está na forma em que você expressa a sua visão sobre o
+          mundo</p>
+        <button>Saiba mais</button>
+        <p id="depoimento">*Depoimentos</p>
+      </div>
+        <div class="Sobreposicao">
+          <img src="../Public/assets/index/tela3.png" alt="">
+        </div>
+    </div>
+  </div>
 
 
 
 
 
 </body>
+
 </html>
