Novas imagens no site

--- a/Public/index.html
+++ b/Public/index.html
@@ -21,16 +21,16 @@
   </div>
   <nav id="navbar">
     <ul>
-      <li>Home</li>
-      <li>Depoimentos</li>
-      <li>Fotografia</li>
-      <li>Sobre</li>
-      <li>Contato</li>
-      <li>Cadastro</li>
-      <li>Login</li>
+      <a href="#home"><li>Home</li></a>
+      <a href="#depoimento"><li>Depoimentos</li></a>
+      <a href="#fotografia"><li>Fotografia</li></a>
+      <a href="#sobre"><li>Sobre</li></a>
+      <a href="#contato"><li>Contato</li></a>
+      <a href="../Public/cadastro.html"><li id="cadastro">Cadastro</li></a>
+      <a href="../Public/login.html"><li id="cadastro">Login</li></a>
     </ul>
   </nav>
-  <div class="ContainerGrande">
+  <div id="home" class="ContainerGrande">
     <div class="PrimeiraPagina">
       <div class="textoPagina">
         <p>A fotografia é a arte de congelar o tempo e transformar o comum em extraordinário.</p>
@@ -38,7 +38,7 @@
       </div>
     </div>
   </div>
-  <div class="ContainerGrande">
+  <div id="depoimento" class="ContainerGrande">
     <div class="SegundaPagina">
       <div class="textoPaginaP3">
         <p>A fotografia transforma</p>
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <div class="ContainerGrande">
+  <div id="fotografia" class="ContainerGrande">
     <div class="TerceiraPagina">
       <div class="cards">
         <div class="telinha1"></div>
@@ -61,7 +61,7 @@
       </div>
     </div>
   </div>
-  <div class="ContainerGrande">
+  <div id="sobre" class="ContainerGrande">
     <div class="QuintaPagina">
       <div class="SobreMim">
         <div class="MinhaFoto"></div>
@@ -85,6 +85,17 @@
           vestibulum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
         </p>
       </div>
+    </div>
+  </div>
+  <div id="contato" class="ContainerGrande">
+    <div class="SextaTela">
+      <div class="SextaConteudo">
+        <div></div>
+        <img src="" alt="">
+      </div>
+      <footer>
+
+      </footer>
     </div>
   </div>
 
