--- a/Public/index.html
+++ b/Public/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/index.css">
+  <script src="https://unpkg.com/scrol  lreveal"></script>
+  <script src="./js/sessao.js"></script>
 
   <title>Photograph | Página Inicial</title>
 
-  <script src="./js/sessao.js"></script>
-  <link rel="stylesheet" href="./css/index.css">
 
 </head>
 
@@ -20,6 +21,7 @@
     </div>
   </div>
   <nav id="navbar">
+    <img src="../Public/assets/index/LogoNavBar.png">
     <ul>
       <a href="#home"><li>Home</li></a>
       <a href="#depoimento"><li>Depoimentos</li></a>
@@ -120,3 +122,7 @@
 </body>
 
 </html>
+
+<script>
+
+</script>
