--- a/Public/index.html
+++ b/Public/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../Public/assets/index/LogoNavBar.png" type="image/x-icon" class="Icon">
   <link rel="stylesheet" href="./css/index.css">
   <script src="https://unpkg.com/scrol  lreveal"></script>
   <script src="./js/sessao.js"></script>
@@ -28,8 +29,8 @@
       <a href="#fotografia"><li>Fotografia</li></a>
       <a href="#sobre"><li>Sobre</li></a>
       <a href="#contato"><li>Contato</li></a>
-      <a href="../Public/cadastro.html"><li id="cadastro">Cadastro</li></a>
-      <a href="../Public/login.html"><li id="cadastro">Login</li></a>
+      <a href="cadastro.html"><li id="cadastro">Cadastro</li></a>
+      <a href="login.html"><li id="cadastro">Login</li></a>
     </ul>
   </nav>
   <div id="home" class="ContainerGrande">
@@ -57,9 +58,27 @@
   <div id="fotografia" class="ContainerGrande">
     <div class="TerceiraPagina">
       <div class="cards">
-        <div class="telinha1"></div>
-        <div class="telinha1"></div>
-        <div class="telinha1"></div>
+        <div class="telinha1">
+          <img src="../Public/assets/index/objetos.jpg">
+          <div class="intro">
+            <h1>Objetos</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="telinha2">
+          <img src="../Public/assets/index/pessoa.jpg">
+          <div class="intro">
+            <h1>Pessoas</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
+        <div class="telinha3">
+          <img src="../Public/assets/index/paisagem.png">
+          <div class="intro">
+            <h1>Paisagens</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
