--- a/Public/index.html
+++ b/Public/index.html
@@ -58,25 +58,28 @@
   <div id="fotografia" class="ContainerGrande">
     <div class="TerceiraPagina">
       <div class="cards">
-        <div class="telinha1">
+        <div class="card">
           <img src="../Public/assets/index/objetos.jpg">
           <div class="intro">
-            <h1>Objetos</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Objetos</h3>
+            <p>Lorem ipsum dolor sit amet, Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <a href="">Read mor</a>
           </div>
         </div>
-        <div class="telinha2">
+        <div class="card">
           <img src="../Public/assets/index/pessoa.jpg">
           <div class="intro">
-            <h1>Pessoas</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Pessoas</h3>
+            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <a href="">Read mor</a>
           </div>
         </div>
-        <div class="telinha3">
+        <div class="card">
           <img src="../Public/assets/index/paisagem.png">
           <div class="intro">
-            <h1>Paisagens</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <h3>Paisagens</h3>
+            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <a href="">Read mor</a>
           </div>
         </div>
       </div>
