--- a/Public/index.html
+++ b/Public/index.html
@@ -63,7 +63,7 @@
           <div class="intro">
             <h3>Objetos</h3>
             <p>Lorem ipsum dolor sit amet, Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
-            <a href="">Read mor</a>
+            <a href="">Ver mais</a>
           </div>
         </div>
         <div class="card">
@@ -71,7 +71,7 @@
           <div class="intro">
             <h3>Pessoas</h3>
             <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
-            <a href="">Read mor</a>
+            <a href="">Ver mais</a>
           </div>
         </div>
         <div class="card">
@@ -79,7 +79,7 @@
           <div class="intro">
             <h3>Paisagens</h3>
             <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
-            <a href="">Read mor</a>
+            <a href="">Ver mais</a>
           </div>
         </div>
       </div>
@@ -120,8 +120,8 @@
         <input id="" required placeholder="Insira seu sobrenome" type="text"> <br>
        </div>
         <input id="" required placeholder="Insira seu email" type="text"> <br>
-        <input id="ipt_desc" required placeholder="Descrição" type="text">
-        <p>*Máximo de 255 caracteres</p> 
+        <textarea id="" rows="5" cols="4"  maxlength="520" placeholder="Descrição"></textarea>
+        <p id="caracteres">caracteres restantes: 520</p> 
         <button onclick="contatar()">Enviar</button>
       </div>
       <div class="SextaConteudo">
