--- a/Public/depoimentos.html
+++ b/Public/depoimentos.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="depoimento.css">
+    <link rel="stylesheet" href="./css/depoimento.css">
     <title>Photograph | Depoimentos</title>
 </head>
 
 <body>
     <div class="topo">
-        <h1> Depoimentos </h1>
+        <a href="index.html"><img src="./assets/index/LogoBlack.png"></a>
     </div>
 
     <div class="container">
@@ -23,10 +23,10 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container2">
         <div class="img">
         </div>
-        <div class="texto_depoimento">
+        <div class="texto_depoimento2">
             <h1>Daniel</h1>
             <p>Aos 14 anos, tomei uma decisão que mudou minha vida: seguir a carreira de fotógrafo. Agora, aos 16, posso afirmar com convicção que foi a melhor escolha que já fiz. A fotografia transcende a mera captura de imagens; é uma forma de arte que nos convida a enxergar o mundo de maneira única. Essa capacidade de reinterpretar a realidade é o que me fascina profundamente.
 
@@ -38,10 +38,12 @@
         </div>
         <div class="texto_depoimento">
             <h1>Vitor</h1>
-            <p>Aos 14 anos, tomei uma decisão que mudou minha vida: seguir a carreira de fotógrafo. Agora, aos 16, posso afirmar com convicção que foi a melhor escolha que já fiz. A fotografia transcende a mera captura de imagens; é uma forma de arte que nos convida a enxergar o mundo de maneira única. Essa capacidade de reinterpretar a realidade é o que me fascina profundamente.
-
-            Para mim, ser fotógrafo vai além de uma profissão; é uma jornada repleta de experiências inesquecíveis. Através da minha lente, tenho o privilégio de imortalizar momentos preciosos e, quem sabe, trazer alegria ao dia das pessoas ao perguntar: "Olá, gostaria que eu registrasse este momento para você?" Cada clique é uma oportunidade de conectar-me com o mundo e com as pessoas ao meu redor, e isso é verdadeiramente gratificante.</p>
+            <p>A fotografia é realmente uma forma incrível de capturar momentos e emoções. Ela vai além de simplesmente tirar fotos; é uma maneira de preservar memórias e sentimentos. Quando olhamos para uma imagem, podemos reviver o momento e sentir novamente as emoções associadas a ele. É como se a fotografia fosse um portal para o passado, permitindo-nos reviver experiências e compartilhar esses sentimentos com os outros. E quando a fotografia entrou na minha vida aos 15 anos um dos motivos foi esse de poder registrar alguns momentos importantes ou até mesmo de momentos que acontece no nosso dia a dia, talvez pareça que esse sentimento de querer registrar momentos surgiu do nada dentro de mim, mas na verdade não foi bem assim esse sentimento só veio quando eu perdi o meu pai e percebi que as únicas coisas que restaram dele foi algumas fotos que tiramos dentro de alguns eventos de trabalho e outras de poucos aniversários que nos passamos juntos, logo eu percebi que a uma grande importância de registrar os momentos, porque com isso nos conseguimos lembrar das pessoas que um dia passaram na nossa vidas e infelizmente não voltaram mais. 
+            </p>
         </div>
+    </div>
+    <div class="topo">
+        <a href="index.html"><img src="./assets/index/LogoBlack.png"></a>
     </div>
 
 </body>
