--- a/Public/index.html
+++ b/Public/index.html
@@ -18,7 +18,7 @@
 <body>
   <div class="fundoImg">
     <div class="box">
-      <img src="../Public/assets/index/LogoEntrada.png" alt="">
+      <img src="../Public/assets/index/LogoEntrada.png">
     </div>
   </div>
   <nav id="navbar">
@@ -47,7 +47,7 @@
         <p>A fotografia transforma</p>
         <p>O ato de fotografar vai muito alem de só clicar, em está na forma em que você expressa a sua visão sobre o
           mundo</p>
-        <button>Saiba mais</button>
+        <a href="depoimentos.html"><button>Saiba mais</button></a>
         <p id="depoimento">*Depoimentos</p>
       </div>
       <div class="Sobreposicao">
@@ -128,9 +128,8 @@
         <img src="../Public/assets/index/tela7.png">
       </div>
       <footer>
-        <div class="LogoBlack">
-          <img src="../Public/assets/index/LogoBlack.png">
-        </div>
+      <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/LogoBlack.png"></a>
+        
         <div class="RedesContato">
           <img src="../Public/assets/index/IconGitHub.png">
           <img src="../Public/assets/index/IconInsta.png">
