--- a/Public/index.html
+++ b/Public/index.html
@@ -24,13 +24,27 @@
   <nav id="navbar">
     <img src="../Public/assets/index/LogoNavBar.png">
     <ul>
-      <a href="#home"><li>Home</li></a>
-      <a href="#depoimento"><li>Depoimentos</li></a>
-      <a href="#fotografia"><li>Fotografia</li></a>
-      <a href="#sobre"><li>Sobre</li></a>
-      <a href="#contato"><li>Contato</li></a>
-      <a href="cadastro.html"><li id="cadastro">Cadastro</li></a>
-      <a href="login.html"><li id="cadastro">Login</li></a>
+      <a href="#home">
+        <li>Home</li>
+      </a>
+      <a href="#depoimento">
+        <li>Depoimentos</li>
+      </a>
+      <a href="#fotografia">
+        <li>Fotografia</li>
+      </a>
+      <a href="#sobre">
+        <li>Sobre</li>
+      </a>
+      <a href="#contato">
+        <li>Contato</li>
+      </a>
+      <a href="cadastro.html">
+        <li id="cadastro">Cadastro</li>
+      </a>
+      <a href="login.html">
+        <li id="cadastro">Login</li>
+      </a>
     </ul>
   </nav>
   <div id="home" class="ContainerGrande">
@@ -62,7 +76,8 @@
           <img src="../Public/assets/index/objetos.jpg">
           <div class="intro">
             <h3>Objetos</h3>
-            <p>Lorem ipsum dolor sit amet, Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <p>Lorem ipsum dolor sit amet, Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet,
+              c</p>
             <a href="">Ver mais</a>
           </div>
         </div>
@@ -70,7 +85,8 @@
           <img src="../Public/assets/index/pessoa.jpg">
           <div class="intro">
             <h3>Pessoas</h3>
-            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit
+              amet, c</p>
             <a href="">Ver mais</a>
           </div>
         </div>
@@ -78,7 +94,8 @@
           <img src="../Public/assets/index/paisagem.png">
           <div class="intro">
             <h3>Paisagens</h3>
-            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet, c</p>
+            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit
+              amet, c</p>
             <a href="">Ver mais</a>
           </div>
         </div>
@@ -87,12 +104,13 @@
   </div>
   <div id="sobre" class="ContainerGrande">
     <div class="QuintaPagina">
-      <div class="SobreMim">
-        <div class="MinhaFoto"></div>
-        <div class="pont"></div>
-        <div class="pont"></div>
-        <div class="pont"></div>
+      <div>
+
       </div>
+      <div class="SobreMim">
+        <img id="img1" src="./assets/index/fotinha1.jpg">
+      </div>
+      
       <div class="SeobreMimText">
         <span>Sobre Mim</span>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat,
@@ -116,27 +134,27 @@
       <div class="TextoPaginaFinal">
         <span>Fale comigo!</span>
         <div class="iptFooter">
-        <input id="ipt" required placeholder="Insira seu nome" type="text">
-        <input id="" required placeholder="Insira seu sobrenome" type="text"> <br>
-       </div>
+          <input id="ipt" required placeholder="Insira seu nome" type="text">
+          <input id="" required placeholder="Insira seu sobrenome" type="text"> <br>
+        </div>
         <input id="" required placeholder="Insira seu email" type="text"> <br>
-        <textarea id="" rows="5" cols="4"  maxlength="520" placeholder="Descrição"></textarea>
-        <p id="caracteres">caracteres restantes: 520</p> 
+        <textarea id="" rows="5" cols="4" maxlength="520" placeholder="Descrição"></textarea>
+        <p id="caracteres">caracteres restantes: 520</p>
         <button onclick="contatar()">Enviar</button>
       </div>
       <div class="SextaConteudo">
         <img src="../Public/assets/index/tela7.png">
       </div>
-      <footer>
-      <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/LogoBlack.png"></a>
-        
+      <div class="footer">
+        <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/LogoBlack.png"></a>
+
         <div class="RedesContato">
           <img src="../Public/assets/index/IconGitHub.png">
           <img src="../Public/assets/index/IconInsta.png">
           <img src="../Public/assets/index/IconLinkdin.png">
           <img src="../Public/assets/index/IconMaps.png">
         </div>
-      </footer>
+      </div>
     </div>
   </div>
 
