--- a/Public/dashboard/dashboard.html
+++ b/Public/dashboard/dashboard.html
@@ -15,8 +15,10 @@
 
 </head>
 <body>
-    <div>
-        
+    <div class="container">
+        <div class="navbar">
+
+        </div>
     </div>
 
 </body>
