--- a/Public/index.html
+++ b/Public/index.html
@@ -149,10 +149,10 @@
         <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/LogoBlack.png"></a>
 
         <div class="RedesContato">
-          <img src="../Public/assets/index/IconGitHub.png">
-          <img src="../Public/assets/index/IconInsta.png">
+          <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/IconGitHub.png"></a>[
           <img src="../Public/assets/index/IconLinkdin.png">
-          <img src="../Public/assets/index/IconMaps.png">
+          <a href=""></a>
+          <a href=""><img src="../Public/assets/index/IconMaps.png"></a>
         </div>
       </div>
     </div>
