--- a/Public/index.html
+++ b/Public/index.html
@@ -18,11 +18,11 @@
 <body>
   <div class="fundoImg">
     <div class="box">
-      <img src="../Public/assets/index/LogoEntrada.png">
+      <img src="assets/index/LogoEntrada.png">
     </div>
   </div>
   <nav id="navbar">
-    <img src="../Public/assets/index/LogoNavBar.png">
+    <img src="assets/index/LogoNavBar.png">
     <ul>
       <a href="#home">
         <li>Home</li>
@@ -65,7 +65,7 @@
         <p id="depoimento">*Depoimentos</p>
       </div>
       <div class="Sobreposicao">
-        <img src="../Public/assets/index/tela3.png" alt="">
+        <img src="assets/index/tela3.png" alt="">
       </div>
     </div>
   </div>
@@ -73,30 +73,30 @@
     <div class="TerceiraPagina">
       <div class="cards">
         <div class="card">
-          <img src="../Public/assets/index/objetos.jpg">
+          <img src="assets/index/objetos.jpg">
           <div class="intro">
             <h3>Objetos</h3>
-            <p>Lorem ipsum dolor sit amet, Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit amet,
-              c</p>
-            <a href="">Ver mais</a>
+            <p>Fotografia de objetos é a arte de capturar a essência e a beleza silenciosa dos detalhes inanimados,
+              transformando o comum em extraordinário através das lentes.</p>
+            <a href="cadastro.html">Ver mais</a>
           </div>
         </div>
         <div class="card">
-          <img src="../Public/assets/index/pessoa.jpg">
+          <img src="assets/index/pessoa.jpg">
           <div class="intro">
             <h3>Pessoas</h3>
-            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit
-              amet, c</p>
-            <a href="">Ver mais</a>
+            <p>Fotografia de pessoas é a arte de eternizar emoções, capturando a essência e a singularidade de cada
+              indivíduo através de um olhar sensível e atento.</p>
+            <a href="cadastro.html">Ver mais</a>
           </div>
         </div>
         <div class="card">
-          <img src="../Public/assets/index/paisagem.png">
+          <img src="assets/index/paisagem.png">
           <div class="intro">
             <h3>Paisagens</h3>
-            <p>Lorem ipsum dolor sit amet, c Aliquam et elit turpis. Nunc tempor pulvinar erat Lorem ipsum dolor sit
-              amet, c</p>
-            <a href="">Ver mais</a>
+            <p>Fotografia de paisagens é a arte de capturar a majestade e a serenidade da natureza, revelando a
+              grandiosidade dos cenários com um olhar contemplativo.</p>
+            <a href="cadastro.html">Ver mais</a>
           </div>
         </div>
       </div>
@@ -110,22 +110,17 @@
       <div class="SobreMim">
         <img id="img1" src="./assets/index/fotinha1.jpg">
       </div>
-      
+
       <div class="SeobreMimText">
-        <span>Sobre Mim</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et elit turpis. Nunc tempor pulvinar erat,
-          eu porta quam auctor a. Mauris sodales dictum felis, ut porttitor dolor. Suspendisse eleifend lorem sit amet
-          enim fringilla elementum non nec dui. Pellentesque condimentum, urna vel venenatis bibendum, massa turpis
-          feugiat tellus, eu pellentesque diam odio a enim. Etiam sed bibendum turpis.
-          <br><br>
-          Pellentesque ante ex, tincidunt sit amet quam et, porta facilisis mauris. Fusce aliquam commodo tortor, quis
-          vehicula purus vestibulum eu. Nullam pretium varius mi feugiat placerat. Ut eu nisl nec nibh eleifend
-          vestibulum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
-          <br><br>
-          Pellentesque ante ex, tincidunt sit amet quam et, porta facilisis mauris. Fusce aliquam commodo tortor, quis
-          vehicula purus vestibulum eu. Nullam pretium varius mi feugiat placerat. Ut eu nisl nec nibh eleifend
-          vestibulum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
+        <h1>Sobre Mim</h1>
+        <p>Olá me chamo Eli, nascido e criado em são Paulo, desde sempre
+          muito animado e curioso para tudo e todos.
+          Minha historia com a fotografia começa lá em 2020 na época de pandemia, tinha acabado de começar o isolamento
+          e eu a principio amei ficar todos os dias em casa, porém conforme foi passando os dias eu fui ficando muito
+          mal por estar sozinho e foi ai que a fotografia me salvou, pois atravez dela eu criei uma nova visão sobre o
+          mundo, pessoas e lugares. APrendi que o mundo sim pode ser belo, depende da forma ou "click" que você faz.
         </p>
+        <a href="minhaHistoria.html">Veja mais</a>
       </div>
     </div>
   </div>
@@ -143,16 +138,16 @@
         <button onclick="contatar()">Enviar</button>
       </div>
       <div class="SextaConteudo">
-        <img src="../Public/assets/index/tela7.png">
+        <img src="assets/index/tela7.png">
       </div>
       <div class="footer">
-        <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/LogoBlack.png"></a>
+        <a href="#"><img src="assets/index/LogoBlack.png"></a>
 
         <div class="RedesContato">
-          <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="../Public/assets/index/IconGitHub.png"></a>[
-          <img src="../Public/assets/index/IconLinkdin.png">
+          <a href="https://github.com/Rufino-0/PhotographRufinos"><img src="assets/index/IconGitHub.png"></a>
+          <img src="assets/index/IconLinkdin.png">
           <a href=""></a>
-          <a href=""><img src="../Public/assets/index/IconMaps.png"></a>
+          <a href=""><img id="maps" src="assets/index/IconMaps.png"></a>
         </div>
       </div>
     </div>
